# myeth-id

./: Cargo.toml  Dockerfile
.github/.k8s/: deploy.yaml  redis.yaml  secret.yaml
.github/workflows/: deploy.yaml
src/: main.rs  resolve.rs
src/resolver/: functions.rs
src/utils/: dns.rs
