[package]
name = "myeth-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
ethers = "2.0.8"
hex = "0.4.3"
hex-literal = "0.4.1"
log = "0.4.19"
serde = "1.0.183"
thiserror = "1.0.46"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
